--- a/Ranger/resources/todo.txt
+++ b/Ranger/resources/todo.txt
@@ -3,6 +3,7 @@
 http://open.weibo.com/wiki/index.php/Rate-limiting
 need to check mysql db charset. 
 
+ranger@sina
 
 http://hi.baidu.com/wangzhe1945/item/5d11e7f536ca39763c198bd0
 
